# best-hackathon-uav-analysis

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  docker-compose.yml  requirements.txt
backend/src/: main.py  test.py
backend/src/api/: flight_router.py  router.py  ws.py
backend/src/core/: config.py  utils.py
backend/src/native/: CMakeLists.txt  main.cpp
backend/src/native/include/: bin_parser.hpp  flight_analysis.hpp  math_utils.hpp  pybind_formatters.hpp  types.hpp
backend/src/native/src/: bin_parser.cpp  flight_analysis.cpp  main.cpp  math_utils.cpp  pybind_formatters.cpp
backend/src/services/: __init__.py  flight_analysis.py  flight_parser.py  flight_service.py
backend/src/static/: viewer.html
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/assets/: drone.glb  fpv_drone_cubed.glb
frontend/src/components/: Layout.tsx  ThemeToggle.tsx  ai-debrief.tsx  cesium-viewer.tsx  enu-viewer.tsx  telemetry-charts.tsx
frontend/src/components/ui/: button.tsx  form.tsx
frontend/src/constants/: routes.ts
frontend/src/features/flight-analysis/: flight-analysis-page.tsx
frontend/src/hooks/: useTheme.ts
frontend/src/lib/: api.ts  endpoints.ts
frontend/src/pages/: NotFoundPage.tsx
frontend/src/pages/viewer/: ChartsPage.tsx  DebriefPage.tsx  LogsPage.tsx  OverviewPage.tsx  TrajectoryPage.tsx
frontend/src/pages/viewer/components/: AiDebriefPanel.tsx  DataTableCard.tsx  FlightCharts.tsx  MessagesPanel.tsx  MetricsPanel.tsx  PageHeader.tsx  PlaybackOverlay.tsx  StatusBanner.tsx  TrajectoryLegend.tsx  TrajectoryMapCanvas.tsx  (+4 more)
frontend/src/types/: analysis.ts  flight.ts  index.ts
frontend/tests/: qa_dashboard.py  qa_dashboard.ts  qa_dashboard2.ts  qa_visual_check.mjs  qa_visual_check.py
